# rust-web-app

./: Cargo.toml  ssrf_simulation.md
src/api/: customers.rs  ldap_ops.rs  mod.rs  network_ops.rs  orders.rs  products.rs  query_ops.rs  session_manager.rs  user_ops.rs
src/api/infra/: id.rs  span.rs
src/domain/: mod.rs
src/domain/customers/commands/: create_customer.rs  customer_db_ops.rs  mod.rs
src/domain/customers/model/: mod.rs  redirect_ops.rs  store.rs
src/domain/customers/queries/: get_customer.rs
src/domain/infra/: mod.rs  resolver.rs  ssrf_engine.rs
src/domain/infra/model/: ssrf_engine.rs
src/domain/infra/transaction/: active.rs  resolver.rs
src/domain/orders/: resolver.rs
src/domain/orders/commands/: add_or_update_product.rs  create_order.rs
src/domain/orders/model/: command_exec.rs  fs_ops.rs  mod.rs  sql_operations.rs  store.rs
src/domain/orders/queries/: get_line_item_with_product.rs  get_order.rs  get_order_summaries_for_customer.rs  get_order_with_products.rs  mod.rs  run_script.rs
src/domain/products/: resolver.rs
src/domain/products/commands/: create_product.rs  loop_limit.rs  mod.rs
src/domain/products/model/: mod.rs  products.xml  xpath_engine.rs
src/domain/users/: mod.rs
src/domain/users/model/: ldap_engine.rs  mod.rs
src/store/: transaction.rs  value.rs
