[package]
name = "shop"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false
edition = "2021"

[dependencies.rocket]
version = "~0.5"
features = ["json"]

[dependencies.rocket_codegen]
version = "~0.5"

[dependencies.serde]
version = "~1"

[dependencies.serde_derive]
version = "~1"

[dependencies.serde_json]
version = "~1"

[dependencies.uuid]
version = "~1"
features = ["serde", "v4"]

[dependencies.emit]
version = "~1"
features = ["serde"]

[dependencies.emit_term]
version = "~1"

[dependencies.emit_otlp]
version = "~1"

[dependencies.thiserror]
version = "~2"

[dependencies.auto_impl]
version = "~1"

[dependencies.once_cell]
version = "~1"

[dependencies.nix]
version = "^0.28"
features = ["socket", "uio"]

[dependencies.async-walkdir]
version = "^1.0"

[dependencies.execute]
version = "^0.2"

[dependencies.chrono]
version = "^0.4"
features = ["serde", "clock"]

[dependencies.diesel]
version = "^2.1"
features = ["sqlite"]

[dependencies.mio]
version = "0.8"
features = ["os-poll", "net"]

[dependencies.xpath_reader]
version = "0.5"

[dependencies.surf]
version = "2.3"
features = ["h1-client"]

[dev-dependencies.tokio]
version = "~1"
features = ["macros"]
